imdb data almost ready

--- a/capstones/cap1/capstone1.ipynb
+++ b/capstones/cap1/capstone1.ipynb
@@ -1374,6 +1374,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T01:36:50.470834Z",
+     "start_time": "2019-07-17T01:36:50.461722Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'movie_title': 'For Whom the Bell Tolls (film)',\n",
+       " 'book': 'For Whom the Bell Tolls',\n",
+       " 'imdb_no': 'tt0035896',\n",
+       " 'usable': True,\n",
+       " 'imdb_title': 'For Whom the Bell Tolls',\n",
+       " 'imdb_actors': ['gary cooper',\n",
+       "  'ingrid bergman',\n",
+       "  'akim tamiroff',\n",
+       "  'arturo de córdova'],\n",
+       " 'imdb_writers': ['dudley nichols', 'ernest hemingway'],\n",
+       " 'imdb_year': '1943',\n",
+       " 'imdb_rated': 'Passed',\n",
+       " 'imdb_released': '28 Apr 1944',\n",
+       " 'imdb_runtime': '170 min',\n",
+       " 'imdb_genre': 'Adventure, Drama, History, Romance, War',\n",
+       " 'imdb_imdbrating': '6.9',\n",
+       " 'imdb_imdbvotes': '7,624',\n",
+       " 'metadata_updated': True}"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_book_dict['ht']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1422,6 +1464,62 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T03:16:51.493642Z",
+     "start_time": "2019-07-17T03:16:51.477598Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pandas' has no attribute 'Dataframe'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-244-e35dfd673896>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mhamos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'f'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mboom\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m's'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcafe\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataframe\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhamos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'Dataframe'"
+     ]
+    }
+   ],
+   "source": [
+    "boom = {'x': 2132, 'y': [1, 2, 4]}\n",
+    "cafe = {'x': 43243, 'y': 3}\n",
+    "\n",
+    "hamos = {'f': boom, 's': cafe}\n",
+    "pd.Dataframe.from_dict(hamos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-07-17T03:18:10.602968Z",
+     "start_time": "2019-07-17T03:18:10.589839Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = pd.DataFrame.from_dict(hamos)\n",
+    "type(s.iloc[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1434,6 +1532,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.1"
   },
   "toc": {
    "base_numbering": 1,
