--- a/capstones/1_books_to_movies/data_munging_pipeline.ipynb
+++ b/capstones/1_books_to_movies/data_munging_pipeline.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CAUTION: This page is extremely long as it contains print outputs that are 2000+ lines, and scrolling through the page can cause lag. This was primarily a workbook that's not formatted for external viewing.\n",
+    "\n",
+    "# You can see only the [.py code here](https://github.com/chanvarma/thinkful-ds/blob/master/capstones/1_books_to_movies/data_munging_pipeline.py), and read more about the [ETL pipeline here](https://github.com/chanvarma/thinkful-ds/blob/master/capstones/1_books_to_movies/README.md). Thanks!   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "toc": true
    },
