--- a/others/data_viz_drills/15.2_Exploring_data_with_Seaborn_plot.ipynb
+++ b/others/data_viz_drills/15.2_Exploring_data_with_Seaborn_plot.ipynb
@@ -15,8 +15,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:03:26.050065Z",
-     "start_time": "2019-08-13T05:03:19.374784Z"
+     "end_time": "2019-08-13T05:16:00.512197Z",
+     "start_time": "2019-08-13T05:15:53.574612Z"
     }
    },
    "outputs": [],
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:05:18.636526Z",
-     "start_time": "2019-08-13T05:05:18.626801Z"
+     "end_time": "2019-08-13T05:16:00.525724Z",
+     "start_time": "2019-08-13T05:16:00.517781Z"
     }
    },
    "outputs": [],
@@ -49,11 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T04:21:59.239639Z",
-     "start_time": "2019-08-13T04:21:59.082735Z"
+     "end_time": "2019-08-13T05:16:00.776951Z",
+     "start_time": "2019-08-13T05:16:00.528846Z"
     }
    },
    "outputs": [
@@ -73,11 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:03:32.849820Z",
-     "start_time": "2019-08-13T05:03:32.659349Z"
+     "end_time": "2019-08-13T05:16:00.979735Z",
+     "start_time": "2019-08-13T05:16:00.783862Z"
     },
     "scrolled": true
    },
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:03:34.629685Z",
-     "start_time": "2019-08-13T05:03:33.889167Z"
+     "end_time": "2019-08-13T05:16:02.138516Z",
+     "start_time": "2019-08-13T05:16:00.984386Z"
     }
    },
    "outputs": [
@@ -210,7 +210,7 @@
        "4             624.1              1052.9                   684         152030  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:03:36.351897Z",
-     "start_time": "2019-08-13T05:03:36.327109Z"
+     "end_time": "2019-08-13T05:16:02.168281Z",
+     "start_time": "2019-08-13T05:16:02.141390Z"
     },
     "scrolled": true
    },
@@ -364,7 +364,7 @@
        "4               -4586.0        80350.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,21 +377,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:04:06.772978Z",
-     "start_time": "2019-08-13T05:04:05.602472Z"
+     "end_time": "2019-08-13T05:16:04.908144Z",
+     "start_time": "2019-08-13T05:16:02.172138Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12f17ea90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x123199208>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,11 +413,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:04:09.334208Z",
-     "start_time": "2019-08-13T05:04:09.306351Z"
+     "end_time": "2019-08-13T05:16:04.980524Z",
+     "start_time": "2019-08-13T05:16:04.912411Z"
     }
    },
    "outputs": [
@@ -510,7 +510,7 @@
        "4                8087.0      3300291.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,8 @@
     "ExecuteTime": {
      "end_time": "2019-08-13T05:06:08.027697Z",
      "start_time": "2019-08-13T05:06:06.983603Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -558,156 +559,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T05:11:01.193290Z",
-     "start_time": "2019-08-13T05:11:00.152704Z"
-    }
+     "end_time": "2019-08-13T05:16:34.503991Z",
+     "start_time": "2019-08-13T05:16:18.606299Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[NbConvertApp] WARNING | pattern 'html-saves/15.2_Exploring_data_with_Seaborn_plot' matched no files\n",
-      "This application is used to convert notebook files (*.ipynb) to various other\n",
-      "formats.\n",
-      "\n",
-      "WARNING: THE COMMANDLINE INTERFACE MAY CHANGE IN FUTURE RELEASES.\n",
-      "\n",
-      "Options\n",
-      "-------\n",
-      "\n",
-      "Arguments that take values are actually convenience aliases to full\n",
-      "Configurables, whose aliases are listed on the help line. For more information\n",
-      "on full configurables, see '--help-all'.\n",
-      "\n",
-      "--debug\n",
-      "    set log level to logging.DEBUG (maximize logging output)\n",
-      "--generate-config\n",
-      "    generate default config file\n",
-      "-y\n",
-      "    Answer yes to any questions instead of prompting.\n",
-      "--execute\n",
-      "    Execute the notebook prior to export.\n",
-      "--allow-errors\n",
-      "    Continue notebook execution even if one of the cells throws an error and include the error message in the cell output (the default behaviour is to abort conversion). This flag is only relevant if '--execute' was specified, too.\n",
-      "--stdin\n",
-      "    read a single notebook file from stdin. Write the resulting notebook with default basename 'notebook.*'\n",
-      "--stdout\n",
-      "    Write notebook output to stdout instead of files.\n",
-      "--inplace\n",
-      "    Run nbconvert in place, overwriting the existing notebook (only \n",
-      "    relevant when converting to notebook format)\n",
-      "--clear-output\n",
-      "    Clear output of current file and save in place, \n",
-      "    overwriting the existing notebook.\n",
-      "--no-prompt\n",
-      "    Exclude input and output prompts from converted document.\n",
-      "--no-input\n",
-      "    Exclude input cells and output prompts from converted document. \n",
-      "    This mode is ideal for generating code-free reports.\n",
-      "--log-level=<Enum> (Application.log_level)\n",
-      "    Default: 30\n",
-      "    Choices: (0, 10, 20, 30, 40, 50, 'DEBUG', 'INFO', 'WARN', 'ERROR', 'CRITICAL')\n",
-      "    Set the log level by value or name.\n",
-      "--config=<Unicode> (JupyterApp.config_file)\n",
-      "    Default: ''\n",
-      "    Full path of a config file.\n",
-      "--to=<Unicode> (NbConvertApp.export_format)\n",
-      "    Default: 'html'\n",
-      "    The export format to be used, either one of the built-in formats\n",
-      "    ['asciidoc', 'custom', 'html', 'html_ch', 'html_embed', 'html_toc',\n",
-      "    'html_with_lenvs', 'html_with_toclenvs', 'latex', 'latex_with_lenvs',\n",
-      "    'markdown', 'notebook', 'pdf', 'python', 'rst', 'script', 'selectLanguage',\n",
-      "    'slides', 'slides_with_lenvs'] or a dotted object name that represents the\n",
-      "    import path for an `Exporter` class\n",
-      "--template=<Unicode> (TemplateExporter.template_file)\n",
-      "    Default: ''\n",
-      "    Name of the template file to use\n",
-      "--writer=<DottedObjectName> (NbConvertApp.writer_class)\n",
-      "    Default: 'FilesWriter'\n",
-      "    Writer class used to write the  results of the conversion\n",
-      "--post=<DottedOrNone> (NbConvertApp.postprocessor_class)\n",
-      "    Default: ''\n",
-      "    PostProcessor class used to write the results of the conversion\n",
-      "--output=<Unicode> (NbConvertApp.output_base)\n",
-      "    Default: ''\n",
-      "    overwrite base name use for output files. can only be used when converting\n",
-      "    one notebook at a time.\n",
-      "--output-dir=<Unicode> (FilesWriter.build_directory)\n",
-      "    Default: ''\n",
-      "    Directory to write output(s) to. Defaults to output to the directory of each\n",
-      "    notebook. To recover previous default behaviour (outputting to the current\n",
-      "    working directory) use . as the flag value.\n",
-      "--reveal-prefix=<Unicode> (SlidesExporter.reveal_url_prefix)\n",
-      "    Default: ''\n",
-      "    The URL prefix for reveal.js (version 3.x). This defaults to the reveal CDN,\n",
-      "    but can be any url pointing to a copy  of reveal.js.\n",
-      "    For speaker notes to work, this must be a relative path to a local  copy of\n",
-      "    reveal.js: e.g., \"reveal.js\".\n",
-      "    If a relative path is given, it must be a subdirectory of the current\n",
-      "    directory (from which the server is run).\n",
-      "    See the usage documentation\n",
-      "    (https://nbconvert.readthedocs.io/en/latest/usage.html#reveal-js-html-\n",
-      "    slideshow) for more details.\n",
-      "--nbformat=<Enum> (NotebookExporter.nbformat_version)\n",
-      "    Default: 4\n",
-      "    Choices: [1, 2, 3, 4]\n",
-      "    The nbformat version to write. Use this to downgrade notebooks.\n",
-      "\n",
-      "To see all available configurables, use `--help-all`\n",
-      "\n",
-      "Examples\n",
-      "--------\n",
-      "\n",
-      "    The simplest way to use nbconvert is\n",
-      "    \n",
-      "    > jupyter nbconvert mynotebook.ipynb\n",
-      "    \n",
-      "    which will convert mynotebook.ipynb to the default format (probably HTML).\n",
-      "    \n",
-      "    You can specify the export format with `--to`.\n",
-      "    Options include ['asciidoc', 'custom', 'html', 'html_ch', 'html_embed', 'html_toc', 'html_with_lenvs', 'html_with_toclenvs', 'latex', 'latex_with_lenvs', 'markdown', 'notebook', 'pdf', 'python', 'rst', 'script', 'selectLanguage', 'slides', 'slides_with_lenvs'].\n",
-      "    \n",
-      "    > jupyter nbconvert --to latex mynotebook.ipynb\n",
-      "    \n",
-      "    Both HTML and LaTeX support multiple output templates. LaTeX includes\n",
-      "    'base', 'article' and 'report'.  HTML includes 'basic' and 'full'. You\n",
-      "    can specify the flavor of the format used.\n",
-      "    \n",
-      "    > jupyter nbconvert --to html --template basic mynotebook.ipynb\n",
-      "    \n",
-      "    You can also pipe the output to stdout, rather than a file\n",
-      "    \n",
-      "    > jupyter nbconvert mynotebook.ipynb --stdout\n",
-      "    \n",
-      "    PDF is generated via latex\n",
-      "    \n",
-      "    > jupyter nbconvert mynotebook.ipynb --to pdf\n",
-      "    \n",
-      "    You can get (and serve) a Reveal.js-powered slideshow\n",
-      "    \n",
-      "    > jupyter nbconvert myslides.ipynb --to slides --post serve\n",
-      "    \n",
-      "    Multiple notebooks can be given at the command line in a couple of \n",
-      "    different ways:\n",
-      "    \n",
-      "    > jupyter nbconvert notebook*.ipynb\n",
-      "    > jupyter nbconvert notebook1.ipynb notebook2.ipynb\n",
-      "    \n",
-      "    or you can specify the notebooks list in a config file, containing::\n",
-      "    \n",
-      "        c.NbConvertApp.notebooks = [\"my_notebook.ipynb\"]\n",
-      "    \n",
-      "    > jupyter nbconvert --config mycfg.py\n",
-      "\n"
+      "[NbConvertApp] Converting notebook 15.2_Exploring_data_with_Seaborn_plot.ipynb to PDF\n",
+      "[NbConvertApp] Support files will be in 15.2_Exploring_data_with_Seaborn_plot_files/\n",
+      "[NbConvertApp] Making directory ./15.2_Exploring_data_with_Seaborn_plot_files\n",
+      "[NbConvertApp] Making directory ./15.2_Exploring_data_with_Seaborn_plot_files\n",
+      "[NbConvertApp] Writing 39216 bytes to ./notebook.tex\n",
+      "[NbConvertApp] Building PDF\n",
+      "[NbConvertApp] Running xelatex 3 times: ['xelatex', './notebook.tex', '-quiet']\n",
+      "[NbConvertApp] Running bibtex 1 time: ['bibtex', './notebook']\n",
+      "[NbConvertApp] WARNING | bibtex had problems, most likely because there were no citations\n",
+      "[NbConvertApp] PDF successfully created\n",
+      "[NbConvertApp] Writing 142010 bytes to 15.2_Exploring_data_with_Seaborn_plot.pdf\n"
      ]
     }
    ],
    "source": [
-    "!jupyter nbconvert --to html html-saves/15.2_Exploring_data_with_Seaborn_plot"
+    "!jupyter nbconvert --to html 15.2_Exploring_data_with_Seaborn_plot.ipynb"
    ]
   },
   {
