--- a/others/data-cleaning-and-viz-drills/15.2_Exploring_data_with_Seaborn_plot.ipynb
+++ b/others/data-cleaning-and-viz-drills/15.2_Exploring_data_with_Seaborn_plot.ipynb
@@ -595,11 +595,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T06:15:35.947691Z",
-     "start_time": "2019-08-13T06:15:22.290522Z"
+     "end_time": "2019-08-13T06:19:30.048943Z",
+     "start_time": "2019-08-13T06:19:16.820072Z"
     },
     "scrolled": false
    },
@@ -609,18 +609,18 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook 15.2_Exploring_data_with_Seaborn_plot.ipynb to html\n",
-      "[NbConvertApp] Writing 665373 bytes to 15.2_Exploring_data_with_Seaborn_plot.html\n",
-      "[master 2a24ad0] seaborn visualtions\n",
-      " 3 files changed, 113 insertions(+), 88 deletions(-)\n",
-      "Enumerating objects: 17, done.\n",
-      "Counting objects: 100% (16/16), done.\n",
+      "[NbConvertApp] Writing 664306 bytes to 15.2_Exploring_data_with_Seaborn_plot.html\n",
+      "[master d9a6ae7] seaborn visualtions\n",
+      " 3 files changed, 47 insertions(+), 132 deletions(-)\n",
+      "Enumerating objects: 15, done.\n",
+      "Counting objects: 100% (15/15), done.\n",
       "Delta compression using up to 4 threads\n",
-      "Compressing objects: 100% (9/9), done.\n",
-      "Writing objects: 100% (9/9), 260.37 KiB | 5.54 MiB/s, done.\n",
-      "Total 9 (delta 7), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 6 local objects.\u001b[K\n",
+      "Compressing objects: 100% (8/8), done.\n",
+      "Writing objects: 100% (8/8), 5.50 KiB | 625.00 KiB/s, done.\n",
+      "Total 8 (delta 6), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (6/6), completed with 5 local objects.\u001b[K\n",
       "To https://github.com/chanvarma/thinkful-capstones.git\n",
-      "   5e25569..2a24ad0  master -> master\n"
+      "   2a24ad0..d9a6ae7  master -> master\n"
      ]
     }
    ],
