--- a/others/22.3-linear-regression-assumptions.ipynb
+++ b/others/22.3-linear-regression-assumptions.ipynb
@@ -33,8 +33,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:11.244337Z",
-     "start_time": "2020-01-08T17:32:09.597125Z"
+     "end_time": "2020-01-08T18:52:42.733148Z",
+     "start_time": "2020-01-08T18:52:40.590353Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:16.617692Z",
-     "start_time": "2020-01-08T17:32:16.614543Z"
+     "end_time": "2020-01-08T18:52:44.486672Z",
+     "start_time": "2020-01-08T18:52:44.483625Z"
     }
    },
    "outputs": [],
@@ -70,8 +70,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:29.743410Z",
-     "start_time": "2020-01-08T17:32:16.620126Z"
+     "end_time": "2020-01-08T18:52:58.672393Z",
+     "start_time": "2020-01-08T18:52:45.990318Z"
     }
    },
    "outputs": [],
@@ -95,8 +95,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:29.770577Z",
-     "start_time": "2020-01-08T17:32:29.746248Z"
+     "end_time": "2020-01-08T18:52:59.950405Z",
+     "start_time": "2020-01-08T18:52:59.932245Z"
     }
    },
    "outputs": [
@@ -252,8 +252,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:29.781555Z",
-     "start_time": "2020-01-08T17:32:29.774455Z"
+     "end_time": "2020-01-08T18:53:01.298977Z",
+     "start_time": "2020-01-08T18:53:01.293428Z"
     }
    },
    "outputs": [],
@@ -281,8 +281,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:29.793485Z",
-     "start_time": "2020-01-08T17:32:29.783759Z"
+     "end_time": "2020-01-08T18:20:54.313400Z",
+     "start_time": "2020-01-08T18:20:54.305145Z"
     }
    },
    "outputs": [
@@ -376,8 +376,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-08T17:32:29.848557Z",
-     "start_time": "2020-01-08T17:32:29.796167Z"
+     "end_time": "2020-01-08T18:53:09.175319Z",
+     "start_time": "2020-01-08T18:53:09.131019Z"
     }
    },
    "outputs": [
@@ -396,10 +396,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>           <td>5.950e+04</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Wed, 08 Jan 2020</td> <th>  Prob (F-statistic):</th>            <td>  0.00</td>   \n",
+       "  <th>Date:</th>             <td>Thu, 09 Jan 2020</td> <th>  Prob (F-statistic):</th>            <td>  0.00</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:02:29</td>     <th>  Log-Likelihood:    </th>          <td>-3.3991e+05</td>\n",
+       "  <th>Time:</th>                 <td>00:23:09</td>     <th>  Log-Likelihood:    </th>          <td>-3.3991e+05</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td> 96453</td>      <th>  AIC:               </th>           <td>6.798e+05</td> \n",
@@ -454,8 +454,8 @@
        "Dep. Variable:            temperature   R-squared (uncentered):                   0.712\n",
        "Model:                            OLS   Adj. R-squared (uncentered):              0.712\n",
        "Method:                 Least Squares   F-statistic:                          5.950e+04\n",
-       "Date:                Wed, 08 Jan 2020   Prob (F-statistic):                        0.00\n",
-       "Time:                        23:02:29   Log-Likelihood:                     -3.3991e+05\n",
+       "Date:                Thu, 09 Jan 2020   Prob (F-statistic):                        0.00\n",
+       "Time:                        00:23:09   Log-Likelihood:                     -3.3991e+05\n",
        "No. Observations:               96453   AIC:                                  6.798e+05\n",
        "Df Residuals:                   96449   BIC:                                  6.799e+05\n",
        "Df Model:                           4                                                  \n",
@@ -523,25 +523,12 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-01-08T17:33:31.131Z"
+     "start_time": "2020-01-08T18:53:30.697Z"
     }
    },
    "outputs": [],
    "source": [
-    "model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-01-08T17:33:46.987Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "x+"
+    "model.coeff()"
    ]
   },
   {
