comparing AIC and BIC scores

--- a/others/22.4-interpreting-coefficients.ipynb
+++ b/others/22.4-interpreting-coefficients.ipynb
@@ -1306,11 +1306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-01-09T10:26:21.211093Z",
-     "start_time": "2020-01-09T10:26:21.205820Z"
+     "end_time": "2020-01-09T10:33:52.843559Z",
+     "start_time": "2020-01-09T10:33:52.837879Z"
     }
    },
    "outputs": [
@@ -1318,14 +1318,14 @@
      "data": {
       "text/plain": [
        "{<statsmodels.regression.linear_model.RegressionResultsWrapper at 0x10d198f50>: {'AIC': 340916.92494235863,\n",
-       "  'BIC': 340916.92494235863},\n",
+       "  'BIC': 340945.3553757248},\n",
        " <statsmodels.regression.linear_model.RegressionResultsWrapper at 0x1333b9ad0>: {'AIC': 333393.0990014516,\n",
-       "  'BIC': 333393.0990014516},\n",
+       "  'BIC': 333431.0062459398},\n",
        " <statsmodels.regression.linear_model.RegressionResultsWrapper at 0x1336adf90>: {'AIC': 338770.11420270964,\n",
-       "  'BIC': 338770.11420270964}}"
+       "  'BIC': 338808.0214471978}}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
     "scores = dict()\n",
     "\n",
     "for m in [model, model2, model3]:\n",
-    "    scores[m]= {'AIC': m.aic, 'BIC': m.aic}\n",
+    "    scores[m]= {'AIC': m.aic, 'BIC': m.bic}\n",
     "        \n",
     "scores"
    ]
